update nodejs import; use consistent naming conventions across examples

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -44,7 +44,7 @@ import { clerkClient } from "@clerk/fastify";
 The Backend SDK is accessible via the `clerk` object if you are using Node.
 
 ```js
-import { clerk } from '@clerk/clerk-sdk-node';
+import clerk from '@clerk/clerk-sdk-node';
 ```
 </Tab>
 </Tabs>
