--- a/docs/references/backend/user/update-user.mdx
+++ b/docs/references/backend/user/update-user.mdx
@@ -52,9 +52,9 @@ export async function POST(req: NextRequest) {
 	// The user attributes to update
 	const params = { firstName: 'John', lastName: 'Wick' };
 
-	const user = await clerkClient.users.updateUser(userId, params);
+	const updatedUser = await clerkClient.users.updateUser(userId, params);
 
-	return NextResponse.json({ user });
+	return NextResponse.json({ updatedUser });
 }
 
 ```
@@ -75,9 +75,9 @@ export default async function handler(req: NextApiRequest, res: NextApiResponse)
   // The user attributes to update
   const params = { firstName: 'John', lastName: 'Wick' };
 
-  const user = await clerkClient.users.updateUser(userId, params);
+  const updatedUser = await clerkClient.users.updateUser(userId, params);
 
-  return res.status(200).json({ user });
+  return res.status(200).json({ updatedUser });
 }
 ```
 
@@ -117,9 +117,9 @@ export const action: ActionFunction = async (req) => {
   // The user attributes to update
   const params = { firstName: 'John', lastName: 'Wick' };
 
-  const user = await createClerkClient({ secretKey: process.env.CLERK_SECRET_KEY }).users.updateUser(userId, params)
+  const updatedUser = await createClerkClient({ secretKey: process.env.CLERK_SECRET_KEY }).users.updateUser(userId, params)
 
-  return json({ user })
+  return json({ updatedUser })
 }
 ```
 </CodeBlockTabs>
