add link to glossary table

--- a/docs/authentication/saml-at-clerk.mdx
+++ b/docs/authentication/saml-at-clerk.mdx
@@ -48,8 +48,12 @@ Once you have filled in these fields, you will be directed to the configuration 
 
 Scroll down to the **Service provider details** section. You will need to add these two fields to your IdP’s application:
 
-- SP Entity ID - This is a unique identifier for your SAML connection that your IdP application needs. Different providers use different terminology so consult our glossary table to locate the right term for your case.
-- ACS URL - This is your application’s URL that your IdP will redirect your users back to after they have authenticated in your IdP. Different providers use different terminology so consult our glossary table to locate the right term for your case.
+- **SP Entity ID** - This is a unique identifier for your SAML connection that your IdP application needs.
+- **ACS URL** - This is your application’s URL that your IdP will redirect your users back to after they have authenticated in your IdP.
+
+<Callout type="info">
+  Different providers use different terminology so consult our [glossary table](#glossary) to locate the right term for your case.
+</Callout>
 
 <Images
   width={3024}
@@ -63,6 +67,10 @@ Scroll down to the **Identity provider configuration** section. Here, you will s
 - **IdP Entity ID** - This is the unique identifier of your IdP application.
 - **IdP SSO URL** - This is your IdP’s URL that we’ll redirect your users to so that they authenticate.
 - **Certificate** - This is the certificate needed for Clerk to securely connect to your IdP.
+
+<Callout type="info">
+  Different providers use different terminology so consult our [glossary table](#glossary) to locate the right term for your case.
+</Callout>
 
 <Images
   width={3024}
@@ -98,6 +106,7 @@ Now that everything is set up, you need to activate the SAML Connection via the 
 Everything should be set up now for you to try out authentication via SAML. Go to your application’s Sign In page and add your email in the input field. If it matches an active SAML Connection, you will be redirected to your IdP where you will log in with your credentials.
 
 ## Glossary
+
 | Term | Explanation | Azure AD Terminology | Google Terminology | Okta Terminology |
 | --- | --- | --- | --- | --- |
 | `idp_entity_id` | This is the unique identifier of your IdP’s application. | Azure AD Identifier | Entity ID | Identity Provider Issuer |
@@ -117,7 +126,7 @@ Everything should be set up now for you to try out authentication via SAML. Go t
 
 **I’ve enabled other strategies but they don’t work.**
 
-It is expected that once Enterprise SSO is enabled in an organization, there should be no other authentication methods applicable. This is in line with an organization’s intent to manage their users’ identity from one place.
+It is expected that once Enterprise SSO is enabled in an application, there should be no other authentication methods applicable. This is in line with an organization’s intent to manage their users’ identity from one place.
 
 **Will SAML work for my existing users?**
 
