apply code review suggestions

--- a/docs/deployments/changing-domains.mdx
+++ b/docs/deployments/changing-domains.mdx
@@ -11,11 +11,19 @@ Learn how to change your production instance's domain or subdomain on Clerk.
 
 Production domains can be changed in the [Clerk Dashboard](https://dashboard.clerk.com/) or via our [backend API](https://clerk.com/docs/reference/backend-api). Once you make the change to your domain, you will need to update the following:
 
-- Update the publishable key
 - Update DNS records
 - Generate new SSL certificates
-- If using social connections, update redirect URLs for enabled social connections
-- If using JWT templates, update JWT issuer and JWKS endpoint in external JWT SSO services
+- [Update your publishable key](#updating-your-publishable-key)
+- If using social connections, update the settings with your social connections, so the redirect URL they are using is correct.
+- If using JWT templates, update JWT issuer and JWKS endpoint in external JWT SSO services.
+
+### Updating your publishable key
+
+After changing your domain, a new **Publishable key** will be automatically generated for your application. You will need to update your environment variables with this new key and redeploy your application. You can find your **Publishable key** on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page of the Clerk Dashboard.
+
+<Callout>
+  Failing to update your **Publishable key** will result in Clerk failing to load. 
+</Callout>
 
 ### Update via Clerk Dashboard
 
