apply code review suggestions

--- a/docs/deployments/changing-domains.mdx
+++ b/docs/deployments/changing-domains.mdx
@@ -14,18 +14,10 @@ Production domains can be changed in the [Clerk Dashboard](https://dashboard.cle
 - Update DNS records
 - Generate new SSL certificates
 - [Update your publishable key](#updating-your-publishable-key)
-- If using social connections, update the settings with your social connections, so the redirect URL they are using is correct.
+- If using social connections, update the settings with your social connections so that the redirect URL they are using is correct.
 - If using JWT templates, update JWT issuer and JWKS endpoint in external JWT SSO services.
 
-### Updating your publishable key
-
-After changing your domain, a new **Publishable key** will be automatically generated for your application. You will need to update your environment variables with this new key and redeploy your application. You can find your **Publishable key** on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page of the Clerk Dashboard.
-
-<Callout>
-  Failing to update your **Publishable key** will result in Clerk failing to load. 
-</Callout>
-
-### Update via Clerk Dashboard
+### Update your domain via Clerk Dashboard
 
 To update the production URL from the Clerk Dashboard, navigate to the **Danger** tab of the [Domains](https://dashboard.clerk.com/last-active?path=domains) page and select **Change domain**. 
 
@@ -45,7 +37,7 @@ You will receive a prompt to enter your new production domain.
   alt="The 'Change domain' modal in the Clerk Dashboard."
 />
 
-### Update via backend API
+### Update your domain via backend API
 
 To update the production URL using the backend API, you can copy the following cURL code. You will want to replace `YOUR_SECRET_KEY` with your Clerk secret key, which can be found on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page of the Clerk Dashboard. Then, make sure to update the `home_url` field with your new production URL.
 
@@ -56,6 +48,14 @@ curl -XPOST -H 'Authorization: <YOUR_SECRET_KEY>' -H "Content-type: application/
 ```
 
 For more information on how to update your instance settings using the backend API, see our [backend API reference](https://clerk.com/docs/reference/backend-api/tag/Beta-Features#operation/UpdateInstanceAuthConfig).
+
+### Update your publishable key
+
+After changing your domain, a new **Publishable key** will be automatically generated for your application. You will need to update your environment variables with this new key and redeploy your application. You can find your **Publishable key** on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page of the Clerk Dashboard.
+
+<Callout>
+  Failing to update your **Publishable key** will result in Clerk failing to load. 
+</Callout>
 
 ## Specify Subdomain
 
