introduce examples for accessing the backend sdk (#324)
Co-authored-by: Roy Anger <roy@royanger.com>

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -7,9 +7,41 @@ description: The Clerk Backend SDK exposes Clerk's backend API resources and low
 
 The [Clerk Backend SDK](https://github.com/clerkinc/javascript/tree/main/packages/backend) exposes Clerk's backend API resources and low-level authentication utilities for JavaScript environments. While the backend SDK is mainly used as a building block for Clerk's higher-level SDKs, it can also be used on its own for advanced flows and custom integrations.
 
-<Callout type="info">
-Clerk's Next.js and Node SDKs expose an instance of the Clerk Backend SDK for use in server environments. The Backend SDK is accessible via the `clerkClient` object if you are using Next.js, and the `clerk` object if you are using Node.
-</Callout>
+Clerk SDKs expose an instance of the Clerk Backend SDK for use in server environments.
+
+<Tabs items={["Next.js", "Remix", "Fastify", "Node"]}>
+<Tab>
+The Backend SDK is accessible via the `clerkClient` object if you are using Next.js.
+
+```jsx
+import { clerkClient } from '@clerk/nextjs';
+```
+</Tab>
+
+<Tab>
+The Backend SDK is accessible via the `createClerkClient` function if you are using Remix. 
+
+```jsx
+import { createClerkClient } from '@clerk/remix/api.server';
+```
+</Tab>
+
+<Tab>
+The Backend SDK is accessible via the `clerkClient` object if you are using Fastify.
+
+```jsx
+import { clerkClient } from "@clerk/fastify";
+```
+</Tab>
+
+<Tab>
+The Backend SDK is accessible via the `clerk` object if you are using Node.
+
+```js
+import clerk from '@clerk/clerk-sdk-node';
+```
+</Tab>
+</Tabs>
 
 ## User operations
 
