Migrate /social-connections/oath from Sanity to MDX

--- a/docs/authentication/social-connections/oauth.mdx
+++ b/docs/authentication/social-connections/oauth.mdx
@@ -1,3 +1,102 @@
 ---
-sanity_slug: /docs/authentication/social-connections-oauth
+title: Social Connections (OAuth)
+description: Learn how to effortlessly add social connections to your application using popular OAuth providers like Google, Facebook, Github and more.
 ---
+
+# Social Connections (OAuth)
+
+Clerk makes it easy to add social connection capabilities to your application. Social connections are designed to simplify the sign-up and sign-in process for the end-user, resulting in higher conversion rates, a streamlined user data collection flow, and an overall better user experience.
+
+<Images
+  width={1879}
+  height={1373}
+  src="/docs/images/setup-clerk/create-sign-in-comp.png"
+  alt="An interactive builder for customizing your <SignIn /> component, which includes choosing identifiers and social login options."
+/>
+
+Social connections provide better security than passwords and other long-lived knowledge-based secrets. With social connections, users gain frictionless access to your application by using their existing credentials from an OAuth provider (Google, Facebook, Twitter, etc.) without having to go through complicated registration flows.
+
+<Callout type="info">
+  When using social connections, the sign-up and sign-in flows are equivalent. If a user doesn't have an account and tries to sign in, an account will be made for them, and vice versa.
+</Callout>
+
+The easiest way to add social connections is by using Clerk's [prebuilt components](/docs/components/overview). If you prefer a more custom solution, check out how to [build a completely custom social connection flow](/docs/custom-flows/oauth-connections).
+
+## Before you start
+
+- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.com/). For more information, check out the [Set up your application](/docs/quickstarts/setup-clerk) guide.
+- You need to install the correct SDK for your application. You can find steps on how to do so through Clerk's [quickstart](/docs/quickstarts/overview) guides.
+
+## Configuration
+
+To enable a social connection provider, go to the [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections) page in the Clerk Dashboard. 
+
+<Images
+  width={3024}
+  height={1654}
+  src="/docs/images/authentication/social-connections.webp"
+  alt="The Social Connections page in the Clerk Dashboard, which includes a list of social connection providers and a toggle to enable them."
+/>
+
+For development instances, Clerk uses pre-configured shared OAuth credentials and redirect URIs to make the development flow as smooth as possible. This means that you can enable any provider without additional configuration. Simply navigate to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=user-authentication/social-connections) in your Clerk Dashboard and toggle on the providers you want to use.
+
+For production instances, you will need to configure the provider with your OAuth credentials. Don't worry, Clerk provides [dedicated guides](/docs/authentication/social-connections/overview) on how to do this for each provider.
+
+## Configure additional OAuth scopes
+
+For each provider, there is a set of pre-configured OAuth scopes that are absolutely necessary for authentication to work properly with Clerk. We call them base scopes.
+
+On top of them, you can specify any additional scopes supported by the provider, by adding them to the "Scopes" field when configuring a custom profile.
+
+<Images
+  width={3024}
+  height={1654}
+  src="/docs/images/authentication/social-connections-scopes.webp"
+  alt="The 'Scopes' section of a social connections' settings modal."
+/>
+
+## Request additional OAuth scopes after sign-up
+
+With Clerk, you can request additional OAuth scopes even after a user has signed up.
+
+For [Clerk Components](/docs/components/overview), this is handled automatically by Clerk. You only have to pass the [`additionalOAuthScopes`](/docs/components/user/user-profile) prop in the [`<UserProfile/>`](/docs/components/user/user-profile) component or the corresponding [`userProfileProp`](/docs/components/user/user-button) in the [`<UserButton />`](/docs/components/user/user-button) component, with any additional OAuth scope you would like per provider.
+
+## OAuth Access Token Wallet
+
+You can retrieve the OAuth access tokens of your users via the [OAuth Access Token Wallet](/docs/reference/backend-api/tag/Users#operation/GetOAuthAccessToken) endpoint that's available in the Clerk Backend API.
+
+Using these tokens, you can query the respective OAuth providers for additional data of your users.
+
+<Callout type="info">
+  Clerk ensures that the OAuth Access Token will be always fresh so that you don't have to worry about OAuth Refresh Tokens anymore.
+</Callout>
+
+## Add Social Connection after Sign Up
+
+For each OAuth provider, you can choose whether it will be available during sign-up and sign-in, or if the connection should be made later.
+
+This is especially useful for applications that prefer to connect third-parties after the fact. For example, a Github connection can be made after sign-up if an application wants to read repository data.
+
+After sign-up, connections can be made through our [`<UserProfile/>`](/docs/components/user/user-profile) component, or with a custom flow.
+
+<Images
+  width={3024}
+  height={1654}
+  src="/docs/images/authentication/after-sign-up.webp"
+  alt="The 'Google' social connection settings modal with a red box surrounding the 'Enable for sign-up and sign-in' section."
+/>
+
+## Connecting to OAuth providers while signed in
+
+When signed in, a user can connect to further OAuth providers as well. There is no need to perform another sign-up.
+
+When using Clerk's [Account Portal](/docs/account-portal/overview) pages, users can see which providers they have already connected to and which ones they can still connect to on thier [User Profile](/docs/account-portal/user-profile-org-profile#user-profile) page.
+
+<Images
+  width={3024}
+  height={1654}
+  src="/docs/images/authentication/connect-account.webp"
+  alt="The User Profile page in the Account Portal. There is a red arrow pointing to the 'Connect account' button in the 'Connected accounts' section."
+/>
+
+If you are using Clerk's [prebuilt components](/docs/components/overview), you can use the [`<UserProfile/>`](/docs/components/user/user-profile) component to allow users to connect to further OAuth providers.
