fix broken link

--- a/docs/authentication/social-connections/oauth.mdx
+++ b/docs/authentication/social-connections/oauth.mdx
@@ -63,7 +63,7 @@ For [Clerk Components](/docs/components/overview), this is handled automatically
 
 ## OAuth Access Token Wallet
 
-You can retrieve the OAuth access tokens of your users via the [OAuth Access Token Wallet](/docs/reference/backend-api/tag/Users#operation/GetOAuthAccessToken) endpoint that's available in the Clerk Backend API.
+You can retrieve the OAuth access tokens of your users via the [OAuth Access Token Wallet](https://clerk.com/docs/reference/backend-api/tag/Users#operation/GetOAuthAccessToken) endpoint that's available in the Clerk Backend API.
 
 Using these tokens, you can query the respective OAuth providers for additional data of your users.
 
