--- a/docs/upgrade-guides/v3-introduction.mdx
+++ b/docs/upgrade-guides/v3-introduction.mdx
@@ -1,7 +1,32 @@
 ---
-sanity_slug: /docs/upgrade-guides/v3-introduction
+title: Upgrading to V3
+description: Learn how to upgrade from Version 2 to Version 3 of the Clerk JavaScript libraries.
 ---
 
-# This is a stub
+# Upgrading to v3
 
-https://clerk.com/docs/upgrade-guides/v3-introduction
+On March 24, 2022, Clerk launched Version 3 of its full suite of Javascript libraries, including our SDKs for React, Next.js, Gatsby, Remix, and Redwood. This guide helps developers upgrade from Version 2 to Version 3.
+
+Need help with the migration? Feel free to [reach out to us](https://clerk.com/support).
+
+## Why upgrade?
+
+Version 3 includes a number of bug fixes, developer experience improvements, and altogether new features, including:
+
+- Support for server-side rendering
+- Reduced React re-renders
+- Improved Typescript types and IntelliSense autocomplete
+
+## Upgrade your client-side code
+
+To get started with the upgrade, you'll need to upgrade your dependencies.
+
+<CodeBlockTabs options={["Next.js", "React"]}>
+```sh filename="terminal"
+npm install @clerk/nextjs@latest
+```
+
+```sh filename="terminal"
+npm install @clerk/clerk-react@latest
+```
+</CodeBlockTabs>
