Move params types to /types context

--- a/docs/references/react/use-organization.mdx
+++ b/docs/references/react/use-organization.mdx
@@ -5,36 +5,9 @@ description: Access attributes of the currently active organization.
 
 # `useOrganization()`
 
-The `useOrganization()` hook gives you access to the current active organization attributes.
+The `useOrganization()` hook gives you access to the current active organization attributes. This hook accepts [`useOrganizationParams`](/docs/references/javascript/types/use-organization-params).
 
 ```jsx
-type useOrganizationParams = {
-  invitationList: {
-    // Pagination params
-    limit?: number;
-    offset?: number;
-    },
-  membershipRequests: true
-    | (commonPaginationParams & {
-        status?: OrganizationInvitationStatus; // e.g. "pending"
-      });
-  memberships: true
-    | (commonPaginationParams & {
-        role?: MembershipRole[]; // e.g. ["basic_member", "admin"]
-      });
-  domains: true
-    | (commonPaginationParams & {
-        enrollmentMode?: OrganizationEnrollmentMode; // e.g. "automatic_invitation"
-      });
-};
-
-type commonPaginationParams = {
-  initialPage?: number;
-  pageSize?: number;
-  infinite?: boolean;
-  keepPreviousData?: boolean;
-}
-
 const { 
   isLoaded,
   organization,
