Update Spotify OAuth instructions

--- a/docs/authentication/social-connections/spotify.mdx
+++ b/docs/authentication/social-connections/spotify.mdx
@@ -9,11 +9,9 @@ How to set up social connection with Spotify
 
 ## Overview
 
-Adding social connection with Spotify to your app with Clerk is done in a few steps - you only need to set the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
+Adding social connection with Spotify to your app with Clerk is done in a few steps - you only need to set the **Client ID** and **Client Secret** in your instance settings.
 
-> Clerk does not currently support preconfigured shared OAuth credentials for development instances. You will have to use your own credentials
-
-For production instances, you will need to generate your own Client ID and Client secret using your Spotify account.
+> Clerk does not currently support preconfigured shared OAuth credentials for Spotify on development instances. You will have to use your own **Client ID** and **Client Secret** for both development and production instances.
 
 ## Before you start
 
@@ -24,24 +22,33 @@ For production instances, you will need to generate your own Client ID and Clien
 
 First, you need to create a new OAuth Spotify app.
 
-You need to set an application name and description and click **Create**.
+You need to set **App name**, **App description** and **Redirect URI**. **Website** is optional.
+
+To find your redirect URI, go to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=user-authentication/social-connections) in your Clerk Dashboard and enable Spotify. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Redirect URIs**. Paste the value into the **Redirect URIs** input in the Spotify dashboard and click **Save**.
 
 <Images
-  width={1891}
-  height={831}
-  src="/docs/images/authentication-providers/spotify/creating-new-application.jpg"
+  width={1725}
+  height={999}
+  src="/docs/images/authentication-providers/spotify/creating-new-app.jpg"
   alt="Creating a new application"
 />
 
-Go to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=authentication/social) in your Clerk Dashboard and enable Spotify. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Paste the value into the **Redirect URIs** input as below and click Save.
+Once your app is created, you'll be redirected to the app dashboard. From there, navigate to **Settings**.
 
 <Images
-  width={1891}
-  height={831}
-  src="/docs/images/authentication-providers/spotify/e7e7b20ac200f2a6d8c7a14f37f0c34743c098b9-1891x831.png"
+  width={1725}
+  height={1070}
+  src="/docs/images/authentication-providers/spotify/navigating-to-settings.png"
+  alt="Navigating to the Settings page"
+/>
+
+Copy the **Client ID** and **Client secret**. Go back to the Clerk Dashboard and paste them into the respective fields.
+
+<Images
+  width={1725}
+  height={1071}
+  src="/docs/images/authentication-providers/spotify/copying-values-from-spotify.png"
   alt="Copying values from the Spotify dashboard"
 />
 
-Copy the **Client ID** and **Client secret** as shown in the above image. Go back to the Clerk Dashboard and paste them into the respective fields.
-
-Don't forget to click **Apply** in the Clerk dashboard. Congratulations! Social connection with Spotify is now configured for your instance.
+Don't forget to click **Save** in the Clerk dashboard. Congratulations! Social connection with Spotify is now configured for your instance.
