--- a/docs/authentication/social-connections/spotify.mdx
+++ b/docs/authentication/social-connections/spotify.mdx
@@ -38,7 +38,7 @@ Once your app is created, you'll be redirected to the app dashboard. From there,
 <Images
   width={1725}
   height={1070}
-  src="/docs/images/authentication-providers/spotify/navigating-to-settings.jgp"
+  src="/docs/images/authentication-providers/spotify/navigating-to-settings.jpg"
   alt="Navigating to the Settings page"
 />
 
@@ -47,7 +47,7 @@ Copy the **Client ID** and **Client secret**. Go back to the Clerk Dashboard and
 <Images
   width={1725}
   height={1071}
-  src="/docs/images/authentication-providers/spotify/copying-values-from-spotify.jgp"
+  src="/docs/images/authentication-providers/spotify/copying-values-from-spotify.jpg"
   alt="Copying values from the Spotify dashboard"
 />
 
