--- a/docs/components/organization/organization-list.mdx
+++ b/docs/components/organization/organization-list.mdx
@@ -97,6 +97,8 @@ All props below are optional.
 | `hidePersonal` | `boolean` | By default, users can switch between organization and their personal account. This option controls whether `OrganizationList` will include the user's personal account in the organization list. Setting this to `false` will hide the personal account entry, and users will only be able to switch between organizations.<br />Defaults to `false`.
 | `skipInvitationScreen` | `boolean` \| `undefined` | Hides the screen for sending invitations after an organization is created. When left undefined Clerk will automatically hide the screen if the number of max allowed members is equal to 1.<br />Defaults to `false`.
 | `apperance` | `object` | Controls the overall look and feel.
-| `afterCreateOrganizationUrl` | `((org: Organization) => string)` \| `string` | Full URL or path to navigate after creating a new organization.<br />Defaults to `undefined`.
-| `afterSelectOrganizationUrl` | `((org: Organization) => string)` \| `string` | Full URL or path to navigate after selecting an organization.<br />Defaults to `undefined`.
-| `afterSelectPersonalUrl` | `((org: Organization) => string)` \| `string` | Full URL or path to navigate after selecting the personal account.<br />Defaults to `undefined`.
+| `afterCreateOrganizationUrl` | <code>((org: [Organization][org-ref]) => string)</code> \| `string` | Full URL or path to navigate after creating a new organization.<br />Defaults to `undefined`.
+| `afterSelectOrganizationUrl` | <code>((org: [Organization][org-ref]) => string)</code> \| `string` | Full URL or path to navigate after selecting an organization.<br />Defaults to `undefined`.
+| `afterSelectPersonalUrl` | <code>((org: [Organization][org-ref]) => string)</code> \| `string` | Full URL or path to navigate after selecting the personal account.<br />Defaults to `undefined`.
+
+[org-ref]: /docs/references/javascript/organization/organization
