--- a/docs/references/javascript/types/sign-up-initial-values.mdx
+++ b/docs/references/javascript/types/sign-up-initial-values.mdx
@@ -1,37 +1,18 @@
 ---
 title: SignUpInitialValues
-description: The type for the initialValues prop that is present in the sign-up components and relevant methods.
+description: The type for the `initialValues` prop that is used to pre-populate the sign-up form.
 ---
 
 # `SignUpInitialValues`
 
-The type for the initialValues prop that is present in the sign-up components and relevant methods.
+The type for the `initialValues` prop that is used to pre-populate the sign-up form.
 
 ## Attributes
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {cells: [
-        <code>emailAddress</code>,
-        <code>string | undefined</code>,
-        ]},
-    {cells: [
-        <code>username</code>,
-        <code>string | undefined</code>,
-        ]},
-    {cells: [
-        <code>phoneNumber</code>,
-        <code>string | undefined</code>,
-        ]},
-    {cells: [
-        <code>firstName</code>,
-        <code>string | undefined</code>,
-        ]},
-    {cells: [
-        <code>lastName</code>,
-        <code>string | undefined</code>,
-        ]}
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `emailAddress?` | `string | undefined` | The email address of the user. |
+| `username?` | `string | undefined` | The username of the user. |
+| `phoneNumber?` | `string | undefined` | The phone number of the user. |
+| `firstName?` | `string | undefined` | The first name of the user. |
+| `lastName?` | `string | undefined` | The last name of the user. |
