--- a/docs/references/javascript/clerk/sign-up.mdx
+++ b/docs/references/javascript/clerk/sign-up.mdx
@@ -250,4 +250,4 @@ All props below are optional.
 | `afterSignInUrl?` | `string` | The full URL or path to navigate after a successful sign in. |
 | `signInUrl` | `string` | Full URL or path to the sign in page. Use this property to provide the target of the 'Sign In' link that's rendered. |
 | `afterSignUpUrl?` | `string` | The full URL or path to navigate after a successful sign up. |
-| `initialValues` | `SignUpInitialValues` | The values used to prefill the sign-in fields with. |
+| `initialValues` | [`SignUpInitialValues`](/docs/references/javascript/types/sign-up-initial-values) | The values used to prefill the sign-in fields with. |
