--- a/docs/references/javascript/types/sign-in-initial-values.mdx
+++ b/docs/references/javascript/types/sign-in-initial-values.mdx
@@ -1,29 +1,16 @@
 ---
 title: SignInInitialValues
-description: The type for the initialValues prop that is present in the sign-in components and relevant methods.
+description: The type for the `initialValues` prop that is used to pre-populate the sign-in form.
 ---
 
 # `SignInInitialValues`
 
-The type for the initialValues prop that is present in the sign-in components and relevant methods.
+The type for the `initialValues` prop that is used to pre-populate the sign-in form.
 
 ## Attributes
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {cells: [
-        <code>emailAddress</code>,
-        <code>string | undefined</code>,
-        ]},
-    {cells: [
-        <code>username</code>,
-        <code>string | undefined</code>,
-        ]},
-    {cells: [
-        <code>phoneNumber</code>,
-        <code>string | undefined</code>,
-        ]},
-    ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `emailAddress?` | `string` | The email address of the user. |
+| `username?` | `string` | The username of the user. |
+| `phoneNumber?` | `string` | The phone number of the user. |
