--- a/docs/references/javascript/types/sign-in-redirect-options.mdx
+++ b/docs/references/javascript/types/sign-in-redirect-options.mdx
@@ -1,6 +1,6 @@
 ---
 title: SignInRedirectOptions
-description: An interface that provides options for a range of redirect methods.
+description: An interface that provides options for sign-in redirect methods.
 ---
 
 # `SignInRedirectOptions`
@@ -9,30 +9,9 @@ An interface that provides options for sign-in redirect methods.
 
 ## Attributes
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {cells: [
-        <code>afterSignInUrl</code>,
-        <code>string | null | undefined</code>,
-        "Full URL or path to navigate after successful sign in."
-        ]},
-    {cells: [
-        <code>afterSignUpUrl</code>,
-        <code>string | null | undefined</code>,
-        <>Full URL or path to navigate after successful sign up. Sets the <code>afterSignUpUrl</code> if the "Sign up" link is clicked.</>
-        ]},
-    {cells: [
-        <code>redirectUrl</code>,
-        <code>string | null | undefined</code>,
-        <>Full URL or path to navigate after successful sign in, or sign up.<br/>The same as setting <code>afterSignInUrl</code> and <code>afterSignUpUrl</code>
-to the same value.</>
-        ]},
-    {cells: [
-        <code>initialValues</code>,
-        <code>SignInInitialValues</code>,
-        <>The values used to prefill the sign-in fields with.</>,
-      ]},
-    ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `afterSignInUrl` | `string \| null \| undefined` | Full URL or path to navigate after successful sign-in. |
+| `afterSignUpUrl` | `string \| null \| undefined` | Full URL or path to navigate after successful sign-up. Sets the `afterSignUpUrl` if the "Sign up" link is clicked. |
+| `redirectUrl` | `string \| null \| undefined` | Full URL or path to navigate after successful sign-in, or sign-up. The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
+| `initialValues` | [`SignInInitialValues`](/docs/references/javascript/types/sign-in-initial-values) | The values used to prefill the sign-in fields with. |
