add more images; fix incorrect image path

--- a/docs/authentication/social-connections/spotify.mdx
+++ b/docs/authentication/social-connections/spotify.mdx
@@ -43,8 +43,22 @@ Once redirected to the application creation form, you need to set an **App name*
 You can retrieve the **Redirect URI** from the Clerk Dashboard. But first, you need to enable Spotify as a social connection for your Clerk application. 
 	
 Navigate to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=user-authentication/social-connections) in your Clerk Dashboard. Toggle on the Spotify option. 
+
+<Images
+  width={3024}
+  height={1650}
+  src="/docs/images/authentication-providers/spotify/enable-spotify.webp"
+  alt="The 'Social connections' page in the Clerk Dashboard. A red arrow is pointing to the Spotify toggle."
+/>
 	
 In the modal that opened, copy **Authorized redirect URI**. Keep this modal and page open.
+
+<Images
+  width={2490}
+  height={1394}
+  src="/docs/images/authentication-providers/spotify/redirect-uri.webp"
+  alt="The Spotify settings modal in the Clerk Dashboard. A red arrow is pointing to the 'Redirect URI' copy button."
+/>
 	
 ### Configure Spotify application
 
@@ -57,7 +71,7 @@ Once your Spotify app is created, you'll be redirected to the app dashboard. Fro
 <Images
   width={3024}
   height={1650}
-  src="/docs/images/authentication-providers/spotify/settings.jpg"
+  src="/docs/images/authentication-providers/spotify/settings.webp"
   alt="The Spotify Developer Dashboard for a specific application. A red arrow points to the 'Settings' button."
 />
 
