Create tables for use organization params and return values

--- a/docs/references/react/use-organization.mdx
+++ b/docs/references/react/use-organization.mdx
@@ -71,7 +71,7 @@ export default function MemberList() {
     <div>
       <h2>Organization members</h2>
       <ul>
-        {memberships.map((membership) => (
+        {memberships.data.map((membership) => (
           <li key={membership.id}>
             {membership.publicUserData.firstName} {membership.publicUserData.lastName} &lt;
             {membership.publicUserData.identifier}&gt; :: {membership.role}
