Small edits from PR comments

--- a/docs/references/javascript/types/use-organization-params.mdx
+++ b/docs/references/javascript/types/use-organization-params.mdx
@@ -52,7 +52,7 @@ type OrganizationEnrollmentMode = "manual_invitation" | "automatic_invitation" |
 
 # `UseOrganizationReturn`
 
-The `memberships`, `membershipRequests`, and `domains` are returned as paginated lists.
+Return value of the [`useOrganization()`](/docs/references/react/use-organization) hook. The `memberships`, `membershipRequests`, and `domains` are returned as paginated lists.
 
 | Variables | Description |
 | --- | --- |
